--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "prisma": "^6.12.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
